fixed socials on side-menu when links overflow

--- a/assets/css/site/socials.css
+++ b/assets/css/site/socials.css
@@ -5,16 +5,13 @@
     transform: translateX(-50%);
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.45) 60%, rgba(255, 255, 255, 0) 90%);
     border: none;
+    backdrop-filter: blur(6px);
 }
 
 .socials-side-menu {
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
+  width: 100%;
+  margin-top: 50px;
+  border-top: 1px solid #000;
 }
 
 .social-badge {
@@ -25,7 +22,6 @@
     align-items: center;
     justify-content: space-between;
     z-index: 9999;
-    backdrop-filter: blur(6px);
   }
 
   .canvas-opened .index.social-badge {
